--- a/7.Pandas/IIT-NIT/Pandas_lie.ipynb
+++ b/7.Pandas/IIT-NIT/Pandas_lie.ipynb
@@ -2570,37 +2570,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    def remove_outlier(df):\n",
+    "<pre><code>def remove_outlier(df):\n",
+    "    Q1 = np.percentile(df,25)\n",
+    "    Q2 = np.percentile(df,75)\n",
+    "    IQR = Q2-Q1\n",
+    "    lower_bound=Q1-1.5*IQR\n",
+    "    upper_bound=Q2-1.5*IQR\n",
+    "    return df[(df>= lower_bound) & (df<=upper_bound)]\n",
     "\n",
-    "        Q1 = np.percentile(df,25)\n",
+    "def reject_outliers(data):\n",
+    "    u = np.median(data)\n",
+    "    s = np.std(data)\n",
+    "    filtered = [e for e in data if (u - 2 * s < e < u + 2 * s)]\n",
+    "    return filtered \n",
     "\n",
-    "        Q2 = np.percentile(df,75)\n",
-    "\n",
-    "        IQR = Q2-Q1\n",
-    "\n",
-    "        lower_bound=Q1-1.5*IQR\n",
-    "\n",
-    "        upper_bound=Q2-1.5*IQR\n",
-    "        \n",
-    "        return df[(df>= lower_bound) & (df<=upper_bound)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "486527b8",
-   "metadata": {},
-   "source": [
-    "    def reject_outliers(data):\n",
-    "\n",
-    "        u = np.median(data)\n",
-    "\n",
-    "        s = np.std(data)\n",
-    "\n",
-    "        filtered = [e for e in data if (u - 2 * s < e < u + 2 * s)]\n",
-    "        \n",
-    "        return filtered \n",
-    "\n",
-    "    filtered = reject_outliers(df)"
+    "filtered = reject_outliers(df)</code><pre>"
    ]
   },
   {
