--- a/10.EDA/Euromart/Euromart_EDA.ipynb
+++ b/10.EDA/Euromart/Euromart_EDA.ipynb
@@ -39,9 +39,7 @@
     "### **Loading Data**\n",
     "The Pandas library offers a wide range of possibilities for loading data into the pandas DataFrame from files like JSON, .csv, .xlsx, .sql, .pickle, .html, .txt, images etc.\n",
     "\n",
-    "Most of the data are available in a tabular format of CSV files. It is trendy and easy to access. Using the read_csv() function, data can be converted to a pandas DataFrame.\n",
-    "\n",
-    "In this article, the data to predict Used car price is being used as an example. In this dataset, we are trying to analyze the used car’s price and how EDA focuses on identifying the factors influencing the car price. We have stored the data in the DataFrame data."
+    "Most of the data are available in a tabular format of CSV files. It is trendy and easy to access. Using the read_csv() function, data can be converted to a pandas DataFrame."
    ]
   },
   {
