--- a/11.File_Handling/file_handle.ipynb
+++ b/11.File_Handling/file_handle.ipynb
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f=open(f'D:\\Python\\File_Handling\\myfile.txt','w')\n",
+    "f=open(r'D:\\Python\\11.File_Handling\\myfile.txt','w')\n",
     "str=input('Enter text: ')\n",
     "f.write(str)\n",
     "\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sameer PashaPython is easy to learn compare to JAVA.\n"
+      "hi venuhi sheryas\n"
      ]
     }
    ],
    "source": [
-    "fvar = open(r'D:\\Python\\File_Handling\\myfile.txt','r')\n",
+    "fvar = open(r'D:\\Python\\11.File_Handling\\myfile.txt','r')\n",
     "res=fvar.read()\n",
     "fvar.close()\n",
     "print(res)"
@@ -396,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
