--- a/7.Pandas/IIT-NIT/Pandas_lie.ipynb
+++ b/7.Pandas/IIT-NIT/Pandas_lie.ipynb
@@ -2339,6 +2339,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4a669ef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('program_duration').get_group('4 Years')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
