--- a/10.EDA/Titanic/Titanic_EDA.ipynb
+++ b/10.EDA/Titanic/Titanic_EDA.ipynb
@@ -2122,7 +2122,7 @@
     "\n",
     "# Bar Plot for Survival Rate by Age and Age Group\n",
     "survival_rate_age.plot(kind='bar', stacked=True)\n",
-    "plt.title('Survival Rate by Age and Age Group')\n",
+    "plt.title('Survival Rate by Age Group')\n",
     "plt.xlabel('Age and Age Group')\n",
     "plt.ylabel('Survival Rate')\n",
     "plt.xticks(rotation=45)\n",
