--- a/3.Data_Types.ipynb
+++ b/3.Data_Types.ipynb
@@ -2555,6 +2555,92 @@
     "- Try converting a Dictionary alone to a list and tuple\n",
     "- Try conversion between data structures"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "474e9b15",
+   "metadata": {},
+   "source": [
+    "<p>1. What does the upper() method do in Python strings? Provide an example.Example:</p>\n",
+    "<div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>uppercase_text = text.upper()</div>\n",
+    "<div>print(uppercase_text) &nbsp;# Output: HELLO WORLD</div>\n",
+    "<br />\n",
+    "<div>2. Explain the purpose of the lower() method in Python strings. Give an example.Example:</div>\n",
+    "<div>text = \"Hello World\"</div>\n",
+    "<div>lowercase_text = text.lower()</div>\n",
+    "<div>print(lowercase_text) &nbsp;# Output: hello world</div>\n",
+    "<br />\n",
+    "<div>3. How does the capitalize() method work in Python strings? Offer an example.Example:</div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>capitalized_text = text.capitalize()</div>\n",
+    "<div>print(capitalized_text) &nbsp;# Output: Hello world</div>\n",
+    "<br />\n",
+    "<div>4. What is the function of the title() method in Python strings? Provide a demonstration.Example:</div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>title_text = text.title()</div>\n",
+    "<div>print(title_text) &nbsp;# Output: Hello World</div>\n",
+    "<br />\n",
+    "<div>5. Explain the use of the strip() method in Python strings. Give an example.Example:</div>\n",
+    "<div>text = \" &nbsp; hello world &nbsp; \"</div>\n",
+    "<div>stripped_text = text.strip()</div>\n",
+    "<div>print(stripped_text) &nbsp;# Output: hello world</div>\n",
+    "<br />\n",
+    "<div>6. How does the split() method function in Python strings? Offer an example.Example:</div>\n",
+    "<div>text = \"hello,world,how,are,you\"</div>\n",
+    "<div>split_text = text.split(',')</div>\n",
+    "<div>print(split_text) &nbsp;# Output: ['hello', 'world', 'how', 'are', 'you']</div>\n",
+    "<br />\n",
+    "<div>7. What does the join() method do in Python strings? Provide an example.Example:</div>\n",
+    "<div>words = ['hello', 'world', 'how', 'are', 'you']</div>\n",
+    "<div>joined_text = ','.join(words)</div>\n",
+    "<div>print(joined_text) &nbsp;# Output: hello,world,how,are,you</div>\n",
+    "<br />\n",
+    "<div>8. Explain the purpose of the find() method in Python strings. Give an example.Example:</div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>index = text.find('world')</div>\n",
+    "<div>print(index) &nbsp;# Output: 6</div>\n",
+    "<br />\n",
+    "<div>9. How does the index() method differ from the find() method in Python strings? Illustrate with an example.Example:</div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>index = text.index('world')</div>\n",
+    "<div>print(index) &nbsp;# Output: 6</div>\n",
+    "<br />\n",
+    "<div>10. What is the function of the count() method in Python strings? Offer an example.Example:</div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>count = text.count('l')</div>\n",
+    "<div>print(count) &nbsp;# Output: 3</div>\n",
+    "<br />\n",
+    "<div>11. Explain the use of the startswith() method in Python strings. Provide a demonstration.Example:</div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>starts_with_hello = text.startswith('hello')</div>\n",
+    "<div>print(starts_with_hello) &nbsp;# Output: True</div>\n",
+    "<br />\n",
+    "<div>12. How does the endswith() method function in Python strings? Offer an example.Example:</div>\n",
+    "<div>text = \"hello world\"</div>\n",
+    "<div>ends_with_world = text.endswith('world')</div>\n",
+    "<div>print(ends_with_world) &nbsp;# Output: True</div>\n",
+    "<br />\n",
+    "<div>13.What does the isalnum() method check for in Python strings? Give an example.Example:</div>\n",
+    "<div>text = \"hello123\"</div>\n",
+    "<div>is_alnum = text.isalnum()</div>\n",
+    "<div>print(is_alnum) &nbsp;# Output: True</div>\n",
+    "<br />\n",
+    "<div>14. Explain the purpose of the isalpha() method in Python strings. Provide a demonstration.Example:</div>\n",
+    "<div>text = \"hello\"</div>\n",
+    "<div>is_alpha = text.isalpha()</div>\n",
+    "<div>print(is_alpha) &nbsp;# Output: True</div>\n",
+    "<br />\n",
+    "<div>15. How does the isdigit() method differ from the isnumeric() method in Python strings? Illustrate with an example.Example:</div>\n",
+    "<div>text1 = \"123\"</div>\n",
+    "<div>text2 = \"&frac12;\"</div>\n",
+    "<div>print(text1.isdigit()) &nbsp;# Output: True</div>\n",
+    "<div>print(text2.isdigit()) &nbsp;# Output: False</div>\n",
+    "<div>print(text1.isnumeric()) &nbsp;# Output: True</div>\n",
+    "<div>print(text2.isnumeric()) &nbsp;# Output: True</div>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
