--- a/7.Pandas/Update Pandas.ipynb
+++ b/7.Pandas/Update Pandas.ipynb
@@ -622,7 +622,7 @@
    ],
    "source": [
     "# Basic summary statistics\n",
-    "df.describe()"
+    "df.describe().T"
    ]
   },
   {
@@ -943,7 +943,7 @@
     }
    ],
    "source": [
-    "data.dropna()\n",
+    "data = data.dropna()\n",
     "#data.dropna(subset=['B])"
    ]
   },
