Modified File Name

--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/softhints/Pandas-Exercises-Projects/blob/main/project/Exploratory%20Data%20Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://github.com/1sumer/Python/tree/master/EDA\" target=\"_parent\"><img src=\"https://www.vectorlogo.zone/logos/github/github-tile.svg\" alt=\"Open In Colab\"/></a>"
    ]
   }
  ],
