--- a/Matplotlib/Seaborn.ipynb
+++ b/Matplotlib/Seaborn.ipynb
@@ -334,7 +334,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"D:\\Python\\9.Matplotlib\\heart.csv\")\n",
+    "df = pd.read_csv(r\"D:\\Python\\Matplotlib\\heart.csv\")\n",
     "df.head()"
    ]
   },
