--- a/Pandas/IIT-NIT/Pandas_lie.ipynb
+++ b/Pandas/IIT-NIT/Pandas_lie.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"D:\\Python\\7.Pandas\\IIT-NIT\\iit.csv\")"
+    "df = pd.read_csv(r\"D:\\Python\\Pandas\\IIT-NIT\\iit.csv\")"
    ]
   },
   {
