--- a/Pandas/IPL 2023/IPL_2023.ipynb
+++ b/Pandas/IPL 2023/IPL_2023.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Deliveries_data = pd.read_csv(r\"D:\\Python\\7.Pandas\\IPL 2023\\each_ball_records.csv\")\n",
-    "Match_data = pd.read_csv(r\"D:\\Python\\7.Pandas\\IPL 2023\\each_match_records.csv\")"
+    "Deliveries_data = pd.read_csv(r\"D:\\Python\\Pandas\\IPL 2023\\each_ball_records.csv\")\n",
+    "Match_data = pd.read_csv(r\"D:\\Python\\Pandas\\IPL 2023\\each_match_records.csv\")"
    ]
   },
   {
