--- a/Python Basics/3.Data_Types.ipynb
+++ b/Python Basics/3.Data_Types.ipynb
@@ -2641,6 +2641,133 @@
     "<div>print(text2.isnumeric()) &nbsp;# Output: True</div>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a37acab",
+   "metadata": {},
+   "source": [
+    "### **List Comprehension**\n",
+    "<code>new_list = [expression for item in iterable if condition]</code>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bdc15919",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squared = [x**2 for x in range(1,11)]\n",
+    "print(squared)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "49a94062",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "evens = [x for x in numbers if x % 2 == 0]\n",
+    "print(evens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9cbd2c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 4), (1, 5), (1, 6), (2, 4), (2, 5), (2, 6), (3, 4), (3, 5), (3, 6)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3]\n",
+    "list2 = [4, 5, 6]\n",
+    "combined = [(x, y) for x in list1 for y in list2]\n",
+    "print(combined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "caceac96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+    "flattened = [x for row in matrix for x in row]\n",
+    "print(flattened) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "29ca56a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even']\n"
+     ]
+    }
+   ],
+   "source": [
+    "categorized = [\"Even\" if x % 2 == 0 else \"Odd\" for x in range(1,11)]\n",
+    "print(categorized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8f069982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even', 'Odd', 'Even']\n"
+     ]
+    }
+   ],
+   "source": [
+    "categorized = [\"Even\" if x % 2 == 0 else \"Odd\" if x % 2 != 0 else \"Other\" for x in range(1,11)]\n",
+    "print(categorized)"
+   ]
   }
  ],
  "metadata": {
@@ -2659,7 +2786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
