--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -1481,18 +1481,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d433570",
+   "id": "208e5e4e",
    "metadata": {},
    "source": [
-    "The above code defines a function Role that takes an actor name as input and checks their role in a set of movies stored in a dictionary called movies. It then prints the movies the actor has acted as hero, heroine, and villain in.\n",
+    "## **Question:**\n",
     "\n",
-    "The function first initializes empty lists to store the movies in which the actor acted as hero, heroine, and villain. It then iterates over the movies in the movies dictionary using a for loop and checks if the input actor name is present in the list of actors for each movie.\n",
+    "Write a Python function Role that, given an actor's name, determines and prints the roles (Hero, Heroine, Villain) played by that actor in various movies from a predefined dictionary, considering the priority of roles as Hero > Heroine > Villain.\n",
     "\n",
-    "If the actor is present in the list of actors, it checks their position in the list using the index method. If the actor is the first element of the list, they are considered to have acted as the hero in that movie and the movie is added to the heroMovies list. If they are the last element, they are considered to have acted as the villain, and the movie is added to the villainMovies list. If they are neither the first nor the last element, they are considered to have acted as the heroine, and the movie is added to the heroineMovies list.\n",
+    "**Hints**\n",
     "\n",
-    "Finally, the function checks if each of the three lists is non-empty and prints the movies in which the actor acted as hero, heroine, and villain, respectively.\n",
-    "\n",
-    "Overall, the Role function provides a simple way to determine the roles of an actor in a set of movies. However, it is limited to the movies listed in the movies dictionary and does not provide any additional information about the movies or actors."
+    "- Start by defining the Role function with one parameter, Name_of_actor.\n",
+    "- Create a dictionary called movies with movie names as keys and lists of actors as values.\n",
+    "- Initialize three empty lists: Hero, Heroine, and Villain to store the roles played by the actor.\n",
+    "- Use a loop to iterate through the movies dictionary.\n",
+    "- Within the loop, check if the Name_of_actor exists in the list of actors for each movie.\n",
+    "- If the actor is found, determine their role in that movie (Hero, Heroine, or Villain) based on their index in the actors list.\n",
+    "- Append the movie name to the corresponding role list.\n",
+    "- After iterating through all movies, check if the actor played any roles and print out the roles along with the movie names.\n",
+    "- Test the function with different actor names to ensure it works correctly."
    ]
   },
   {
