--- a/EDA/Global_Store/Global Store Analysis.ipynb
+++ b/EDA/Global_Store/Global Store Analysis.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Problem Statement for Exploratory Data Analysis (EDA) on the Global Superstore Database:\n",
+    "\n",
+    "- Sales Trends and Patterns: Identify seasonal fluctuations and trends in sales across product categories and regions.\n",
+    "- Profitability Analysis: Analyze profit margins across product categories, customer segments, and regions to identify high-margin areas.\n",
+    "- Customer Segmentation: Segment customers based on purchasing behavior to identify valuable customer segments and their preferences.\n",
+    "- Product Performance: Assess the performance of products and categories to identify top-sellers and underperforming items.\n",
+    "- Regional Analysis: Evaluate sales and profitability across regions to identify growth opportunities and regional preferences.\n",
+    "- Shipping Dynamics: Analyze shipping preferences, delivery times, and costs to optimize logistics and improve customer satisfaction.\n",
+    "- Promotional Effectiveness: Evaluate the impact of promotions and discounts on sales and profitability.\n",
+    "- Return Analysis: Investigate return rates and reasons to minimize returns and improve product quality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Import Necessary Libraries**\n",
     "- The code imports necessary libraries for data analysis and visualization, including pandas, numpy, matplotlib, and seaborn.\n",
     "- Pandas is commonly used for data manipulation and analysis.\n",
@@ -35,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +87,7 @@
        "(51290, 24)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +833,7 @@
        "(51290, 25)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1063,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1184,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1290,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1319,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1375,13 +1391,33 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Gsma.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(51290, 19)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gsma.shape"
    ]
   },
   {
@@ -5634,6 +5670,11 @@
     "<p> \n",
     "conclusion, a comprehensive understanding of sales, profitability, and shipping dynamics is crucial for making informed business decisions and optimizing operational efficiency. By leveraging insights from this analysis, businesses can enhance customer satisfaction, streamline logistics, and drive overall profitability.</p>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
