--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -1,17 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# object-oriented Programming (OOPs)"
+    "## **object-oriented Programming (OOPs)**"
    ]
   },
   {
@@ -264,9 +257,6 @@
     }
    ],
    "source": [
-    "# Python code to demonstrate how parent constructors\n",
-    "# are called.\n",
-    "\n",
     "# parent class\n",
     "class Person(object):\n",
     "\n",
@@ -596,11 +586,6 @@
     "\n",
     "- __ge__(self, other): Defines behavior for the greater-than-or-equal-to operator, >=.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
