--- a/EDA/Tips/tips.ipynb
+++ b/EDA/Tips/tips.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Importing Necessory libraries**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,6 +17,13 @@
     "import numpy as np \n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Loading The Dataset**"
    ]
   },
   {
@@ -211,6 +225,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Reading The Data**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding the Shape**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -228,6 +256,13 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding the Top & Bottom Rows**"
    ]
   },
   {
@@ -447,6 +482,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding the Name of The Columns**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -464,6 +506,13 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding the Information About The Dataset**"
    ]
   },
   {
@@ -494,6 +543,13 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Statistical Information About The Dataset**"
    ]
   },
   {
@@ -587,6 +643,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding the Null Values in the dataset**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -614,6 +677,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding Duplicates in the dataset**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -634,12 +704,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Removing the Duplicates from the dataset**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Grouping the Variable**"
    ]
   },
   {
@@ -713,6 +797,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding the unique values in column**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -731,6 +822,13 @@
    ],
    "source": [
     "df['time'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding Count of Each unique values**"
    ]
   },
   {
@@ -918,7 +1016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.Bar Plot / Count Plot\n",
+    "## **1.Bar Plot / Count Plot**\n",
     "- Displaying the distribution of categorical variables.\n",
     "- Visualizing the frequency or count of each category in a dataset."
    ]
@@ -993,6 +1091,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Pie Chart**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1030,7 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Scatter Plot\n",
+    "## **2. Scatter Plot**\n",
     "- Exploring the relationship between two continuous variables.\n",
     "- Identifying patterns, correlations, or clusters in the data."
    ]
@@ -1061,7 +1166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Line Plot\n",
+    "## **3. Line Plot**\n",
     "- Displaying the trend or pattern in a time series.\n",
     "- Showing the relationship between two continuous variables over a continuous interval.\n",
     "- Comparing changes in variables over a continuous range."
@@ -1101,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Box Plot\n",
+    "## **4. Box Plot**\n",
     "- Displaying the mean, median, quantiles, and outliers in data.\n",
     "- Comparing the distribution of multiple variables.\n",
     "- Identifying the spread of numerical variables.\n",
@@ -1134,7 +1239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Density Plot \n",
+    "## **5. Density Plot**\n",
     "\n",
     "we use density plots instead of histograms\n",
     "\n",
@@ -1244,7 +1349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Pairplot\n",
+    "## **6. Pairplot**\n",
     "- Exploring correlations and trends between multiple variables by visualizing them in pairs."
    ]
   },
@@ -1275,7 +1380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Heatmap\n",
+    "## **7. Heatmap**\n",
     "- Displaying the correlation matrix of numerical variables.\n",
     "- Identifying patterns and relationships in a large dataset.\n"
    ]
@@ -1307,7 +1412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Combining Plots\n",
+    "## **8. Combining Plots**\n",
     "- Well, we sort of do that a lot when it comes to EDA by employing plots that are actually just a combination of the plots discussed above.\n",
     "\n",
     "- We do this in an attempt to ‘save time’ but let’s be real, decent EDA takes a lot of time regardless."
@@ -1356,7 +1461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9. Violin Plot\n",
+    "## **9. Violin Plot**\n",
     "- Combines the features of box plots and kernel density plots.\n",
     "- Visualizing the distribution of a numerical variable across different categories."
    ]
