--- a/Web Scarpping/Web Scrapping.ipynb
+++ b/Web Scarpping/Web Scrapping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8535,7 +8535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_dataframe.to_csv('Products.csv')"
+    "final_dataframe.to_excel('Products.xlsx')"
    ]
   }
  ],
