--- a/Pandas/Update Pandas.ipynb
+++ b/Pandas/Update Pandas.ipynb
@@ -8091,7 +8091,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8132,7 +8141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8142,7 +8151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -8227,7 +8236,7 @@
        "4          105    David      Sales   65000   38"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8239,7 +8248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -8248,7 +8257,7 @@
        "(5, 5)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8260,7 +8269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -8274,7 +8283,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8286,7 +8295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -8300,7 +8309,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8312,7 +8321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8322,7 +8331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -8407,7 +8416,7 @@
        "4          105    David      Sales          65000   38"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8419,7 +8428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -8477,7 +8486,7 @@
        "3          104    Sarah  Marketing          75000   30"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8489,12 +8498,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def double(x):\n",
+    "    return 2 * x   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#What function can be used to apply a function to each element of a DataFrame column?\n",
     "df['Annual_Salary'] = df['Annual_Salary'].apply(lambda x: x * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    120000\n",
+       "1    140000\n",
+       "2    160000\n",
+       "3    150000\n",
+       "4    130000\n",
+       "Name: Annual_Salary, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Annual_Salary']"
    ]
   },
   {
@@ -8592,6 +8636,14 @@
    "source": [
     "#How do you sort a DataFrame by values in a specific column?\n",
     "df.sort_values(by='Age')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- df.drop(['Age],axis=1, inplace =True) #droping a column\n",
+    "- df.drop(3, inplace =True) # droping row"
    ]
   },
   {
